--- a/main.css
+++ b/main.css
@@ -1,10 +1,16 @@
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+}
+
+body {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 #root {
-    height: 30vh;
-    width: 100%;
+    
 }
 
 input {
@@ -19,23 +25,29 @@ label {
 }
 
 .container {
-    background-image: linear-gradient(to right, white, rgb(220, 240, 255));
+    height: 30vh;
+    width: 100vw;
+    margin-top: 10vw;
     display: flex;
-    flex-direction: column;
-    align-items: left;
-    row-gap: 1em;
-    padding: 1em;
-    border-radius: 10px;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: center;
+    
+    
     opacity: 0;
     transition: opacity 0.5s ease;
 }
 
 .section {
+    background-image: linear-gradient(to right, white, rgb(220, 240, 255));
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    gap: 2em;
+    row-gap: 2em;
+    padding: 1em;
+    border-radius: 10px;
     height: 100%;
-    width: 100%;
+    width: 50%;
 }
 .show {
     opacity: 1;
